syntax = "proto3";

package timesheet.v1;

option go_package = "github.com/manabie-com/backend/pkg/manabuf/timesheet/v1;tpb";

service LocationService{
  rpc GetGrantedLocationsOfStaff(GetGrantedLocationsOfStaffRequest) returns (GetGrantedLocationsOfStaffResponse);
}

message GetGrantedLocationsOfStaffRequest{
  string staff_id = 1;
  string name = 2;
  int32 limit = 3;
}

message GetGrantedLocationsOfStaffResponse{
    repeated Location locations = 1;
}

message Location {
    string location_id = 1;
    string name = 2;
}